--- a/wub/index.html
+++ b/wub/index.html
@@ -18,13 +18,13 @@
   <nav>
     <ul>
       <li>
-        <a class="contrast" href="#">home</a>
+        <a class="contrast" href="https://davidlee.github.io/spec-driver/">docs</a>
       </li>
       <li>
-        <a class="contrast" href="#">about</a>
+        <a class="contrast" href="https://pypi.org/project/spec-driver/">install</a>
       </li>
       <li>
-        <a class="contrast" href="#">github</a>
+        <a class="contrast" href="https://github.com/davidlee/spec-driver">github</a>
       </li>
     </ul>
   </nav>
