--- a/wub/index.html
+++ b/wub/index.html
@@ -14,7 +14,6 @@
   <script href="behaviour.js"></script>
 </head>
 <body data-theme="light">
-  <header></header>
   <nav>
     <ul>
       <li>
@@ -138,7 +137,7 @@
             </tr>
           </tbody>
         </table>
-        <figcaption>Comparing spec-kit and spec-driver</figcaption><br />
+        <figcaption>fig a) Comparing spec-kit and spec-driver</figcaption><br />
         <p>
           <b>TL'DR</b>- if you haven't tried spec-kit, maybe start there. If you find yourself wanting more, spec-driver might be for you. 
         </p>
@@ -217,7 +216,7 @@
             </li>
           </ul>
         </div>
-        <img src="./assets/simple.svg" />
+        <figcaption>fig b) a typical workflow: create a delta to bundle some changes; design, plan, implement and verify them; then capture the context with an auto-generated revision, and reflect the changes to specs / requirements</figcaption><img src="./assets/simple.svg" />
         <div class="spaced">
           <p>
             Run the <mark>spec-driver sync</mark> command to automatically: 
@@ -234,6 +233,7 @@
             </li>
           </ul>
         </div>
+        <hr />
         <p>
           <b>Design goals</b>
         </p>
