chore: update wub

--- a/wub/index.html
+++ b/wub/index.html
@@ -257,6 +257,17 @@
             be ready to eat right out of the box
           </li>
         </ul>
+        <p>
+          <b>Design principles</b>
+        </p>
+        <ul>
+          <li>
+            Begin with correctness (a <mark>robust conceptual model</mark> ), and then make it comprehensible; don't start with what's easy and then try to make it work correctly. Compare the trajectories of MySQL (it was fast, they tried to make it correct) and PostgreSQL (it was correct, they made it fast). 
+          </li>
+          <li>
+            <mark>self-teaching over instruction</mark> if we provide tooling which clarifies and reinforces the data model (as with <pre class="inline">spec-driver schema show</pre> and the prompts to use it when creating new files), the agent needs far less documentation and behavioural scaffolding, and can often intuit, and even clarify for you how to use the system appropriately.
+          </li>
+        </ul>
       </section>
     </article>
   </main>
